--- a/src/app/components/shared/sidebar/sidebar.component.html
+++ b/src/app/components/shared/sidebar/sidebar.component.html
@@ -40,10 +40,10 @@
   <div class="nav-section">
     <div class="nav-section-title" [class.hidden]="isCollapsed">Management</div>
     <mat-nav-list>
-      <a mat-list-item [routerLink]="['/documents']" routerLinkActive="active">
+      <!-- <a mat-list-item [routerLink]="['/documents']" routerLinkActive="active">
         <i class="bi bi-folder2-open" matListItemIcon></i>
         <span matListItemTitle>Documents</span>
-      </a>
+      </a> -->
       <a mat-list-item [routerLink]="['/requests']" routerLinkActive="active">
         <i class="bi bi-clipboard2-data" matListItemIcon></i>
         <span matListItemTitle>Requests</span>
