--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app-container">
+<div class="app-container" *ngIf="!isLoginPage()">
   <app-header></app-header>
   <div class="content-container">
     <app-sidebar></app-sidebar>
@@ -7,3 +7,5 @@
     </main>
   </div>
 </div>
+
+<router-outlet *ngIf="isLoginPage()"></router-outlet>
